Ну вроде эта фигня теперь чекает токены (кнш, однопоток, мне лень делать многопоток)

--- a/LDBTokenParser/LDBTokenParser.csproj
+++ b/LDBTokenParser/LDBTokenParser.csproj
@@ -4,6 +4,12 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net48</TargetFramework>
         <ApplicationIcon>Assets\\app.ico</ApplicationIcon>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    </ItemGroup>
 
 </Project>
